[metadata]
name = souper
description = Souper - Generic Indexed Storage based on ZODB
long_description = file: README.rst, CHANGES.rst, COPYRIGHT.rst
keywords = zodb zope pyramid node plone
author = BlueDynamics Alliance
author_email = dev@bluedynamics.com
url = https://pypi.org/project/souper
license = BSD
license_file = LICENSE.rst
classifiers =
    Framework :: ZODB
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
install_requires =
    setuptools
    six
    node.ext.zodb
    repoze.catalog>=0.9.0
namespace_packages =
    souper
# thanks to this bug, the following line w/o override in setup.py does not work.
# https://github.com/pypa/setuptools/issues/1136
package_dir =
    = src
packages = find:
zip_safe = False

[options.extras_require]
test =
    node.ext.zodb[test]
    node[test]

[options.packages.find]
where =
    src

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[isort]
# for details see
# http://docs.plone.org/develop/styleguide/python.html#grouping-and-sorting
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py
